# simple-event-store

./: README.md  pyproject.toml
app/: main.py
app/services/: store.py
tests/: test_store.py
