[project]
name = "event-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pytest>=9.0.3",
    "uvicorn>=0.48.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = [
    "httpx2>=2.2.0",
    "pytest>=9.0.3",
]
